--- a/TenDrum.css
+++ b/TenDrum.css
@@ -26,15 +26,7 @@ body {
 }
 
 body {
-  background-color: #EFE5CB;
-}
-
-.Mask {
-  position: absolute;
-  z-index: -1;
-  width: 100%;
-  height: 100vh;
-  background-color: dimgray;
+  background-color: #efe5cb;
 }
 
 .Nav {
@@ -52,7 +44,8 @@ body {
 }
 
 .Nav .Menu-group {
-  width: 60%;
+  width: 45%;
+  margin-right: 30px;
   text-align: center;
   font-size: 20px;
   line-height: 20px;
@@ -68,12 +61,90 @@ body {
 
 .Nav .Menu-group .index-btn {
   width: 100%;
-  -webkit-transition: 1s;
-  transition: 1s;
+  height: 60px;
+  text-align: center;
 }
 
 .Nav .Menu-group .index-btn:hover {
   cursor: pointer;
+}
+
+@-webkit-keyframes stripe-slide {
+  0% {
+    background-position: 0% 0;
+  }
+  100% {
+    background-position: 100% 0;
+  }
+}
+
+@keyframes stripe-slide {
+  0% {
+    background-position: 0% 0;
+  }
+  100% {
+    background-position: 100% 0;
+  }
+}
+
+.Nav .Menu-group .btn {
+  overflow: visible;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  background: transparent;
+  font: inherit;
+  line-height: normal;
+  cursor: pointer;
+  -moz-user-select: text;
+  display: block;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 5px;
+  background-color: #fff;
+  color: #666;
+  border: 2px solid #666;
+  border-radius: 6px;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.Nav .Menu-group .btn:-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+
+.Nav .Menu-group .btn--stripe {
+  overflow: hidden;
+  position: relative;
+}
+
+.Nav .Menu-group .btn--stripe:after {
+  content: "";
+  display: block;
+  height: 7px;
+  width: 100%;
+  background-image: repeating-linear-gradient(45deg, #666, #666 1px, transparent 2px, transparent 5px);
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  border-top: 1px solid #666;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background-size: 7px 7px;
+}
+
+.Nav .Menu-group .btn--stripe:hover {
+  background-color: #666;
+  color: #fff;
+  border-color: #000;
+}
+
+.Nav .Menu-group .btn--stripe:hover:after {
+  background-image: repeating-linear-gradient(45deg, #fff, #fff 1px, transparent 2px, transparent 5px);
+  border-top: 1px solid #000;
+  -webkit-animation: stripe-slide 12s infinite linear forwards;
+          animation: stripe-slide 12s infinite linear forwards;
 }
 
 .big-img {
@@ -87,14 +158,33 @@ body {
   min-height: 42vh;
 }
 
-.ham-ani {
-  width: 80px;
-  height: 80px;
+.decoration {
+  position: absolute;
+  border-left: 5px solid #0b6c6d;
+  font-size: 35px;
+}
+
+.hamburger {
   padding: 10px;
   position: fixed;
   right: 10px;
   top: 10px;
   z-index: 20;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.hamburger .ham-ani {
+  width: 80px;
+  height: 80px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -111,7 +201,7 @@ body {
   cursor: pointer;
 }
 
-.ham-ani .stick {
+.hamburger .ham-ani .stick {
   width: 80px;
   height: 8px;
   border-radius: 4px;
@@ -120,21 +210,21 @@ body {
   display: inline-block;
 }
 
-.ham-ani .stick:last-child {
+.hamburger .ham-ani .stick:last-child {
   margin-bottom: 0px;
 }
 
-.ham-ani .stick-1.open {
+.hamburger .ham-ani .stick-1.open {
   -webkit-animation: stick-1-open 0.6s ease-out forwards;
           animation: stick-1-open 0.6s ease-out forwards;
 }
 
-.ham-ani .stick-2.open {
+.hamburger .ham-ani .stick-2.open {
   -webkit-animation: stick-2-open 0.6s linear forwards;
           animation: stick-2-open 0.6s linear forwards;
 }
 
-.ham-ani .stick-3.open {
+.hamburger .ham-ani .stick-3.open {
   -webkit-animation: stick-3-open 0.6s linear forwards;
           animation: stick-3-open 0.6s linear forwards;
 }
@@ -144,7 +234,7 @@ body {
     width: 80px;
   }
   40% {
-    background-color: #0B6C6D;
+    background-color: #0b6c6d;
     width: 8px;
     -webkit-transform: translate(40px, 0px);
             transform: translate(40px, 0px);
@@ -157,7 +247,7 @@ body {
             animation-timing-function: cubic-bezier(0, 1, 1, 1);
   }
   100% {
-    background-color: #0B6C6D;
+    background-color: #0b6c6d;
     width: 8px;
     -webkit-transform: translate(35px, 46px);
             transform: translate(35px, 46px);
@@ -169,7 +259,7 @@ body {
     width: 80px;
   }
   40% {
-    background-color: #0B6C6D;
+    background-color: #0b6c6d;
     width: 8px;
     -webkit-transform: translate(40px, 0px);
             transform: translate(40px, 0px);
@@ -182,7 +272,7 @@ body {
             animation-timing-function: cubic-bezier(0, 1, 1, 1);
   }
   100% {
-    background-color: #0B6C6D;
+    background-color: #0b6c6d;
     width: 8px;
     -webkit-transform: translate(35px, 46px);
             transform: translate(35px, 46px);
@@ -196,7 +286,7 @@ body {
             transform: translate(0px, 0px) rotate(0deg);
   }
   100% {
-    background-color: #0B6C6D;
+    background-color: #0b6c6d;
     -webkit-transform: translate(8px, 0px) rotate(40deg);
             transform: translate(8px, 0px) rotate(40deg);
   }
@@ -209,7 +299,7 @@ body {
             transform: translate(0px, 0px) rotate(0deg);
   }
   100% {
-    background-color: #0B6C6D;
+    background-color: #0b6c6d;
     -webkit-transform: translate(8px, 0px) rotate(40deg);
             transform: translate(8px, 0px) rotate(40deg);
   }
@@ -222,7 +312,7 @@ body {
             transform: translate(0px, 0px) rotate(0deg);
   }
   100% {
-    background-color: #0B6C6D;
+    background-color: #0b6c6d;
     -webkit-transform: translate(8px, -23px) rotate(-40deg);
             transform: translate(8px, -23px) rotate(-40deg);
   }
@@ -235,13 +325,13 @@ body {
             transform: translate(0px, 0px) rotate(0deg);
   }
   100% {
-    background-color: #0B6C6D;
+    background-color: #0b6c6d;
     -webkit-transform: translate(8px, -23px) rotate(-40deg);
             transform: translate(8px, -23px) rotate(-40deg);
   }
 }
 
-.stick-1.close {
+.hamburger .stick-1.close {
   width: 8px;
   -webkit-transform: translate(27px, 26px);
           transform: translate(27px, 26px);
@@ -249,14 +339,14 @@ body {
           animation: stick-1-close 0.6s ease-out forwards;
 }
 
-.stick-2.close {
+.hamburger .stick-2.close {
   -webkit-transform: translate(0px, 0px) rotate(40deg);
           transform: translate(0px, 0px) rotate(40deg);
   -webkit-animation: stick-2-close 0.6s ease-out forwards;
           animation: stick-2-close 0.6s ease-out forwards;
 }
 
-.stick-3.close {
+.hamburger .stick-3.close {
   -webkit-transform: translate(0px, -23px) rotate(-40deg);
           transform: translate(0px, -23px) rotate(-40deg);
   -webkit-animation: stick-3-close 0.6s ease-out forwards;
@@ -289,11 +379,11 @@ body {
 
 @-webkit-keyframes stick-2-close {
   0% {
-    background-color: #0B6C6D;
+    background-color: #0b6c6d;
     width: 80px;
   }
   20% {
-    background-color: #0B6C6D;
+    background-color: #0b6c6d;
     width: 8px;
     -webkit-transform: translate(0, 0px) rotate(40deg);
             transform: translate(0, 0px) rotate(40deg);
@@ -320,11 +410,11 @@ body {
 
 @keyframes stick-2-close {
   0% {
-    background-color: #0B6C6D;
+    background-color: #0b6c6d;
     width: 80px;
   }
   20% {
-    background-color: #0B6C6D;
+    background-color: #0b6c6d;
     width: 8px;
     -webkit-transform: translate(0, 0px) rotate(40deg);
             transform: translate(0, 0px) rotate(40deg);
@@ -351,11 +441,11 @@ body {
 
 @-webkit-keyframes stick-3-close {
   0% {
-    background-color: #0B6C6D;
+    background-color: #0b6c6d;
     width: 80px;
   }
   20% {
-    background-color: #0B6C6D;
+    background-color: #0b6c6d;
     width: 8px;
     -webkit-transform: translate(0, -23px) rotate(-40deg);
             transform: translate(0, -23px) rotate(-40deg);
@@ -381,11 +471,11 @@ body {
 
 @keyframes stick-3-close {
   0% {
-    background-color: #0B6C6D;
+    background-color: #0b6c6d;
     width: 80px;
   }
   20% {
-    background-color: #0B6C6D;
+    background-color: #0b6c6d;
     width: 8px;
     -webkit-transform: translate(0, -23px) rotate(-40deg);
             transform: translate(0, -23px) rotate(-40deg);
@@ -407,6 +497,12 @@ body {
     -webkit-transform: translate(0, 0px);
             transform: translate(0, 0px);
   }
+}
+
+.hamburger .ham-menu {
+  color: #0b6c6d;
+  text-align: center;
+  font-size: 20px;
 }
 
 .btn-groupxxx {
@@ -468,22 +564,26 @@ body {
   margin-top: 50px;
 }
 
-.btn-groupxxx .btnsss .btns #btn-index {
-  font-size: 45px;
+.btn-groupxxx .btnsss .btns .btn-index {
+  font-size: 48px;
+  margin-bottom: 30px;
+  color: #595757;
 }
 
 .btn-groupxxx .btnsss .btns .btn {
-  padding: 30px;
+  padding: 20px;
   width: 100%;
-  color: #4d483d;
   font-weight: bolder;
   line-height: 50%;
   text-align: center;
-  font-size: 40px;
 }
 
 .btn-groupxxx .btnsss .btns .btn:hover {
   background-color: #d4a63f;
+}
+
+.btn-groupxxx .btnsss .btns .btn h1 {
+  color: #4d483d;
 }
 
 .btn-groupxxx .btnsss .infor {
@@ -495,7 +595,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-top: 95px;
+  margin-top: 150px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   padding: 20px;
@@ -503,7 +603,30 @@ body {
 
 .btn-groupxxx .btnsss .infor .top {
   width: 100%;
-  text-align: right;
+  text-align: center;
+}
+
+.btn-groupxxx .btnsss .infor .top .lan {
+  width: 35px;
+  height: 35px;
+  margin: 10px 0;
+  font-size: 16px;
+  text-align: center;
+  line-height: 35px;
+}
+
+.btn-groupxxx .btnsss .infor .top .lan:hover {
+  cursor: pointer;
+}
+
+.btn-groupxxx .btnsss .infor .top .en {
+  color: #d4a63f;
+  border: 1px solid #d4a63f;
+}
+
+.btn-groupxxx .btnsss .infor .top .cn {
+  color: #595757;
+  border: 1px solid #595757;
 }
 
 .btn-groupxxx .btnsss .bott {
