--- a/TenDrum.scss
+++ b/TenDrum.scss
@@ -11,7 +11,7 @@ html {
 body {
     margin: 0;
     padding: 0;
-    font-family: 微軟正黑體;
+    font-family: 'Fredericka the Great', cursive, 微軟正黑體 ;
     
 }
 
@@ -19,6 +19,7 @@ html,
 body {
     position: relative;
     height: 100%;
+    
 }
 @import "./TenDrum";
 @import"./index";
