--- a/TenDrum.scss
+++ b/TenDrum.scss
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    font-family: 'Fredericka the Great', cursive,微軟正黑體,'Noto Sans HK', sans-serif;
 }
 a {
     text-decoration: none;
@@ -11,7 +12,7 @@ html {
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Fredericka the Great', cursive, 微軟正黑體 ;
+    
     
 }
 
