--- a/_index.scss
+++ b/_index.scss
@@ -4,7 +4,7 @@
     $stripe-height: 7px;
     $btn-color: $color-gray;
     $btn-background: #fff;
-    $btn-color-hover: #d3a53f;
+    $btn-color-hover: #ffffff;
     $btn-background-hover: $color-gray;
     $border-color: $color-gray;
     $border-color-hover: $color-black;
@@ -13,9 +13,7 @@
     }
 
     .Nav {
-        width: 100%;
-
-        // background-color: thistle;
+        width: 100%;        
         display: flex;
         justify-content: space-between;
 
@@ -27,7 +25,7 @@
             margin-right: 30px;
             text-align: center;
             font-size: 20px;
-            line-height: 20px;
+            font-weight: 300;
             display: flex;
             justify-items: flex-end;
             padding-top: 20px;
@@ -37,8 +35,8 @@
             text-rendering: optimizeLegibility;
             .index-btn {
                 width: 100%;
-                height: 60px;
-                text-align: center;
+                
+                
 
                 &:hover {
                     cursor: pointer;
@@ -77,8 +75,8 @@
                 padding: 0;
                 border: 0;
                 background: transparent;
-                font: inherit;
-                line-height: normal;
+                
+                line-height: calc(50px);
                 cursor: pointer;
                 -moz-user-select: text;
 
@@ -149,9 +147,10 @@
         background-image: url("./img/十鼓描圖-上色2版拷貝.jpg");
         background-position: center;
         background-repeat: no-repeat;
-        background-size: contain;
+        // background-size: contain;
+        background-size: cover;
         // opacity: 0.5;
         width: 100%;
-        min-height: 42vh;
+        min-height: 48vh;
     }
 }
