--- a/TenDrum.css
+++ b/TenDrum.css
@@ -648,14 +648,18 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .about-swiper .swiper-slide .abouts {
-  width: 50%;
+  width: 100%;
 }
 
 .about-swiper .swiper-slide .abouts .en-title {
+  width: 50%;
   color: #f7f8f8;
+  margin-left: 30%;
 }
 
 .about-swiper .swiper-slide .abouts .en-title u {
@@ -667,6 +671,8 @@ body {
 }
 
 .about-swiper .swiper-slide .abouts .cn-title {
+  margin-left: 30%;
+  width: 60%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -689,22 +695,51 @@ body {
   color: #f7f8f8;
 }
 
-.about-swiper .swiper-slide .abouts .about-title {
+.about-swiper .swiper-slide .abouts .about-text-bacimg {
+  height: 100vh;
+  background-image: url("./img/關於背景1002試用-小-04_工作區域4.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.about-swiper .swiper-slide .abouts .about-text-bacimg .about-title {
   width: 100%;
   font-size: 36px;
   text-align: center;
   line-height: 80px;
 }
 
-.about-swiper .swiper-slide .abouts .about-text {
+.about-swiper .swiper-slide .abouts .about-text-bacimg .about-text {
   font-size: 16px;
 }
 
+.about-swiper .swiper-slide .abouts .about-text-bacimg .text-color-F7F8F8 {
+  width: 60%;
+  color: #f7f8f8;
+}
+
 .about-swiper .color-B15821 {
-  width: 100%;
-  background-image: url("./img/關於背景1002試用_工作區域 1.png");
+  height: 970px;
+  background-image: url("./img/關於背景1002試用-小-02.svg");
   background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .about-swiper .color-E9C37C {
@@ -713,6 +748,10 @@ body {
 
 .about-swiper .color-D4A63F {
   background-color: #d4a63f;
+}
+
+.swiper-pagination-bullet:active {
+  background: #f7f8f8;
 }
 
 body {
